# kintre_logger

./: .gitignore  Cargo.toml
migrations/: 20221126065212_create_table_schedule.sql  20221126155433_create_table_weight_log.sql  20221126160435_drop_table_weight_log.sql  20221126160550_create_table_weight_log.sql  20221126170456_set_primary_key_on_date.sql
src/: discordbot.rs  main.rs  mod.rs  poise_data.rs
src/commands/: add_weight.rs  mod.rs  neko.rs  set_schedule.rs
src/commands/databases/: mod.rs  weight_log.rs
