[package]
name = "kintre_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

serenity = {version = "0.11.5", features = ["framework", "standard_framework"]}

tokio = {version = "1.6.0", features = ["macros", "rt-multi-thread"]}

dotenv = "0.15.0"
sqlx = { version = "0.5.10", features = [ "mysql", "runtime-async-std-native-tls" ] }
